Fixed landing page title on mobile view

--- a/src/sections/Landing/Landing.scss
+++ b/src/sections/Landing/Landing.scss
@@ -73,10 +73,6 @@
     gap: defaultUnit(20);
     width: fit-content;
     max-width: defaultUnit(512);
-
-    @include mobile {
-      margin-top: defaultUnit(20);
-    }
   }
 
   &__animate {
